# OCR_to_doc

./: .gitignore  agents.md  dispatcher.py  export_docx.py  export_excel_poc.py  export_yomi_json.py  formatting_templates.json  formula_templates.json  icon_config.json  image_normalizer.py  image_preprocessor.py  ingest.py  markdown_cleanup.py  math_refiner.py  math_snippet_extractor.py  ocr.py  ocr_chanked.py  ocr_per_page.py  plain_text.py  postprocess.py  pyproject.toml  readme.md  text_pdf.py  ui_preview.py
.github/workflows/: windows-ci.yml  windows_portable.yml
configs/: settings.json
configs/icon_profiles/: default.json  lenient.json  strict.json
docs/: Tasks.md  architectured.md  change_log.md  cli_commands.md  context_engineering.md  distribution.md  env_and_limits.md  python_runtime.md  requirements_template.md  spec.md  ui_design_plan.md  ui_requirements.md
docs/poc_results/: 2025-11-23-math_ocr_poc.md  2025-11-24-preprocess_ab.md  2025-11-25-excel_format_comparison.md
docs/requirements/: 2025-11-25-excel_export_poc.md
docs/templates/: requirements_general_template.md
poppler/: merged_md.py
scripts/: command_help.py
tests/: test_dispatcher_passthrough.py  test_export_docx_inline_math.py  test_export_excel_table_mode.py  test_image_normalizer.py  test_image_preprocessor.py  test_markdown_cleanup.py  test_ocr_figure_overwrite.py  test_plain_text.py
tests/fixtures/: sample.png.b64
ui/: package-lock.json  package.json  playwright.config.ts
ui/src/: App.tsx  index.css  main.tsx  theme.ts
ui/src-tauri/: Cargo.toml  tauri.conf.json
(+17 files in other folders)
