[project]
name = "yomitoku-ocr"
version = "0.1.0"
description = ""
authors = [
    {name = "t_ryohei"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "yomitoku (>=0.10.1,<0.11.0)",
    "pdf2image (>=1.17.0,<2.0.0)",
    "python-docx (>=0.8.11,<1.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
